--- a/Juego/CandyMind/css/styleindex.css
+++ b/Juego/CandyMind/css/styleindex.css
@@ -1,47 +1,42 @@
-﻿body {
-    height: 100%;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    border: 0;
-    background-size: cover;
+body {
+  width: 50%;
+  height: 100%;
+  background: url('../Recursos/Menu/Fondo_menu.gif') no-repeat fixed center;
+  background-size: 50% 100%;
 }
 
 #full-screen-background-image {
-    z-index: 0;
-    width: auto;
-    height: auto;
-    position: fixed;
-    top: 0;
-    left: 0;
-    overflow-y: hidden;
-    overflow-x: hidden;
-}
-
-.horizontal{
-    display:flex;
-    justify-content: center;
-}
-
-.vertical{
-    display:flex;
-    justify-content:center;
-    flex-direction:column;
-}
-
-.divcentrar{
-    height:100%;
+  z-index: 0;
+  width: 100%;
+  max-width: 50rem;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 #fondo {
-    position: relative;
+  position: relative;
 }
 
+.horizontal{
+  display:flex;
+  justify-content: center;
+}
+
+.vertical{
+  display:flex;
+  justify-content:center;
+  flex-direction:column;
+}
+
+.divcentrar{
+  height:100%;
+}
 .sobre {
-    position: absolute;
-    top: 430px;
-    left: 300px;
-    border: none;
+  position: absolute;
+  padding: 24% 0 0 72.25%;
+  border: none;
 }
-
-
